--- a/projeto-hotel-ateneu/src/main/webapp/menu-principal-bootstrap.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/menu-principal-bootstrap.xhtml
@@ -19,15 +19,13 @@
 </h:head>
 <h:body>
 
-	<!-- MENU DE NAVEGAÇÃO -->
+	<!-- MENU DE NAVEGAÇÃO - SERA COMUM NA MAIORIA DAS PÁGINAS-->
 	<nav class="navbar navbar-expand-sm bg-light">
-	
-	<!-- LINKS PARA PAGINAS --> 
 	<ul class="navbar-nav">
 		<li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
 			href="#" id="dropClientes" data-toggle="dropdown">Clientes</a>
 			<div class="dropdown-menu">
-				<a class="dropdown-item" href="#">Cadastro</a> 
+				<a class="dropdown-item" href="cadastro-cliente-bootstrap.jsf">Cadastro</a> 
 				<a class="dropdown-item" href="#">Encerramento de contrato</a>
 			</div>
 		</li>
@@ -39,13 +37,13 @@
 				<a class="dropdown-item" href="#">Aluguel de carro</a>
 			</div>
 		</li>
-
 	</ul>
-
-
 	</nav>
-
-
+	<!--  FIM DO MENU NAVBAR -->
+	
+	<h3>Bem vindo, <h:outputText value="#{usuarioBean.usuario.login}"/></h3>
+	
+	
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
