--- a/projeto-hotel-ateneu/src/main/webapp/menu-principal-bootstrap.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/menu-principal-bootstrap.xhtml
@@ -26,7 +26,7 @@
 			href="#" id="dropClientes" data-toggle="dropdown">Clientes</a>
 			<div class="dropdown-menu">
 				<a class="dropdown-item" href="cadastro-cliente-bootstrap.jsf">Cadastro</a> 
-				<a class="dropdown-item" href="#">Encerramento de contrato</a>
+				<a class="dropdown-item" href="checkout.jsf">Checkout</a>
 			</div>
 		</li>
 		
