--- a/projeto-hotel-ateneu/src/main/webapp/check-in.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/check-in.xhtml
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<!-- Required meta tags -->
@@ -20,34 +21,16 @@
 </h:head>
 <h:body>
 
-	<!-- MENU DE NAVEGAÇÃO - SERA COMUM NA MAIORIA DAS PÁGINAS-->
-	<nav class="navbar navbar-expand-sm bg-light"> <!-- LINKS PARA PAGINAS -->
-	<ul class="navbar-nav">
-		<li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
-			href="#" id="dropClientes" data-toggle="dropdown">Clientes</a>
-			<div class="dropdown-menu">
-				<a class="dropdown-item" href="cadastro-cliente-bootstrap.jsf">Cadastro</a> 
-				<a class="dropdown-item" href="checkout.jsf">Checkout</a>
-			</div></li>
+	<!-- MENU DE NAVEGAÇÃO -->
+	<ui:include src="/templates/menu-navegacao.xhtml"></ui:include>
+	<!--  FIM DO MENU DE NAVEGAÇÃO -->
 
-		<li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
-			href="#" id="dropClientes" data-toggle="dropdown">Serviços</a>
-			<div class="dropdown-menu">
-				<a class="dropdown-item" href="#">Babysitter</a> <a
-					class="dropdown-item" href="#">Aluguel de carro</a>
-			</div></li>
-
-	</ul>
-	</nav>
-
-	<!--  FIM DO MENU NAVBAR -->
 
 	<!-- INICIO DO CORPO DO FOMULARIO -->
-
 	<h5>Cadastro Cliente</h5>
 	<h:form id="cadastro">
-		<h:messages/>
-		<h:inputHidden value="#{clienteBean.cliente.id}"/>
+		<h:messages />
+		<h:inputHidden value="#{clienteBean.cliente.id}" />
 		<h:panelGrid columns="2" cellpadding="5">
 			<f:facet name="header">
 				<h:outputText value="Dados Pessoais" />
@@ -80,11 +63,12 @@
 				<f:validateRegex pattern="[a-zA-Z0-9\-\_\.]+@[a-zA-Z0-9\-\_\.]+" />
 				<h:message for="email" />
 			</h:inputText>
-			<h:commandButton action="#{clienteBean.cadastrarCliente}" value="Salvar"></h:commandButton>
+			<h:commandButton action="#{clienteBean.cadastrarCliente}"
+				value="Salvar"></h:commandButton>
 		</h:panelGrid>
 
-		
-		
+
+
 	</h:form>
 
 	<!-- FIM DO CORPO DO FOMULARIO -->
