--- a/projeto-hotel-ateneu/src/main/webapp/pagina-principal.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/pagina-principal.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8" />
@@ -19,27 +20,9 @@
 </h:head>
 <h:body>
 
-	<!-- MENU DE NAVEGAÇÃO - SERA COMUM NA MAIORIA DAS PÁGINAS-->
-	<nav class="navbar navbar-expand-sm bg-light">
-	<ul class="navbar-nav">
-		<li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
-			href="#" id="dropClientes" data-toggle="dropdown">Clientes</a>
-			<div class="dropdown-menu">
-				<a class="dropdown-item" href="cadastro-cliente-bootstrap.jsf">Cadastro</a> 
-				<a class="dropdown-item" href="checkout.jsf">Checkout</a>
-			</div>
-		</li>
-		
-		<li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
-			href="#" id="dropClientes" data-toggle="dropdown">Serviços</a>
-			<div class="dropdown-menu">
-				<a class="dropdown-item" href="#">Babysitter</a> 
-				<a class="dropdown-item" href="#">Aluguel de carro</a>
-			</div>
-		</li>
-	</ul>
-	</nav>
-	<!--  FIM DO MENU NAVBAR -->
+	<!-- MENU DE NAVEGAÇÃO -->
+	<ui:include src="/templates/menu-navegacao.xhtml"></ui:include>
+	<!--  FIM DO MENU DE NAVEGAÇÃO -->
 	
 	<h3>Bem vindo, <h:outputText value="#{usuarioBean.usuario.login}"/></h3>
 	
