Criação da classe de serviço

--- a/projeto-hotel-ateneu/src/main/webapp/check-in.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/check-in.xhtml
@@ -91,8 +91,8 @@
 
 			</h:selectOneMenu>
 
-			<h:outputLabel value="Quantidade de quartos: " for="qtdQuartos" />
-			<h:selectOneMenu id="qtdQuartos">
+			<h:outputLabel value="Quantidade de pessoas: " for="qtdPessoas" />
+			<h:selectOneMenu id="qtdPessoas">
 
 			</h:selectOneMenu>
 
