--- a/projeto-hotel-ateneu/src/main/webapp/index.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/index.xhtml
@@ -33,6 +33,9 @@
 	<h:outputText></h:outputText>
 
 	<div class="container">
+	
+	<!-- MENSAGEM DE ERRO AO LOGAR -->
+	<h:messages class="alert alert-danger" id="mensagemErroLogin"/>
 		
 		
 		<!-- JANELA MODAL DO LOGIN -->
