--- a/projeto-hotel-ateneu/src/main/webapp/cadastro-usuario.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/cadastro-usuario.xhtml
@@ -23,11 +23,42 @@
 	<!-- MENU DE NAVEGAÇÃO -->
 	<ui:include src="/templates/menu-navegacao.xhtml"></ui:include>
 	<!--  FIM DO MENU DE NAVEGAÇÃO -->
-	
-	<h3>Bem vindo, <h:outputText value="#{usuarioBean.nomeDoUsuario}"/></h3>
-	
-	
-	<!-- Optional JavaScript -->
+
+	<h5>Cadastro de Usuarios</h5>
+
+	<h:form id="cadastroUsuario">
+		<h:messages />
+
+		<h:panelGrid columns="2" cellpadding="5">
+			<f:facet name="header">
+				<h:outputText value="Cadastro de Usuario" />
+			</f:facet>
+			
+			<h:outputLabel value="Nome: " for="nome"/>
+			<h:inputText id="nome" value="#{usuarioBean.usuario.nomeCompleto}" size="50" required="true"
+			requiredMessage="Informe o nome completo do usuario"/>
+			
+			<h:outputLabel value="Login: " for="login"/>
+			<h:inputText id="login" value="#{usuarioBean.usuario.login}" size="25" required="true"
+			requiredMessage="Informe um login válido"/>
+			
+			<h:outputLabel value="Senha: " for="senha" />
+			<h:inputSecret id="senha" value="#{usuarioBean.usuario.senha}" size="25" required="true"
+			requiredMessage="Informe uma senha"/>
+			
+			<h:outputLabel value="Confime a senha: " for="senhaConfirmar" />
+			<h:inputSecret id="senhaConfirmar" value="#{usuarioBean.confirmarSenha}" size="25" required="true"
+			requiredMessage="Informe a senha de confirmação"/>
+			
+			<h:commandButton action="#{usuarioBean.cadastroUsuario}" value="Salvar"/>
+		</h:panelGrid>
+
+
+	</h:form>
+
+
+
+	<!-- Optional JavaScript --> 
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
