Criação do pacote contrato

--- a/projeto-hotel-ateneu/src/main/webapp/pagina-principal.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/pagina-principal.xhtml
@@ -24,7 +24,7 @@
 	<ui:include src="/templates/menu-navegacao.xhtml"></ui:include>
 	<!--  FIM DO MENU DE NAVEGAÇÃO -->
 	
-	<h3>Bem vindo, <h:outputText value="#{usuarioBean.nomeDoUsuario}"/></h3>
+	<h3>Bem vindo, <h:outputText value="#{usuarioBean.usuarioLogado.nomeCompleto}"/></h3>
 	
 	
 	<!-- Optional JavaScript -->
