Adicionando forms das telas de babysitter e alguel de carros.

--- a/projeto-hotel-ateneu/src/main/webapp/cadastro-servico.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/cadastro-servico.xhtml
@@ -59,7 +59,7 @@
 
 
 			<h:commandButton action="#{servicoBean.cadastrarServico}"
-				value="Salvar" />
+				value="Salvar" class="btn btn-primary" />
 
 
 		</h:panelGrid>
