--- a/projeto-hotel-ateneu/src/main/webapp/cadastro-usuario.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/cadastro-usuario.xhtml
@@ -50,7 +50,7 @@
 			<h:inputSecret id="senhaConfirmar" value="#{usuarioBean.confirmarSenha}" size="25" required="true"
 			requiredMessage="Informe a senha de confirmação"/>
 			
-			<h:commandButton action="#{usuarioBean.cadastroUsuario}" value="Salvar"/>
+			<h:commandButton action="#{usuarioBean.cadastroUsuario}" value="Salvar" class="btn btn-primary" />
 		</h:panelGrid>
 
 
