--- a/projeto-hotel-ateneu/src/main/webapp/check-in.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/check-in.xhtml
@@ -100,7 +100,7 @@
 
 
 		<h:commandButton action="#{clienteBean.cadastrarCliente}"
-			value="Salvar"></h:commandButton>
+			value="Salvar" class="btn btn-primary" ></h:commandButton>
 
 
 	</h:form>
