--- a/projeto-hotel-ateneu/src/main/webapp/servico-aluguel-carros.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/servico-aluguel-carros.xhtml
@@ -16,7 +16,6 @@
 		integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
 		crossorigin="anonymous" />
 
-	<title></title>
 </h:head>
 <h:body>
 
@@ -24,10 +23,42 @@
 	<ui:include src="/templates/menu-navegacao.xhtml"></ui:include>
 	<!--  FIM DO MENU DE NAVEGAÇÃO -->
 
-	<h5>Serviço Aluguel de Carros</h5>
+	<h:form id="aluguelCarros">
+		<h:messages />
+
+		<h:panelGrid columns="2" cellpadding="5">
+			<f:facet name="header">
+				<h:outputText value="Aluguel de Carros" />
+			</f:facet>
+			
+			<h:outputLabel value="Marca: " for="marcaCarro" />
+			<h:selectOneMenu id="marcaCarro" value="#">
+				<f:selectItem itemValue="Fiat" itemLabel="Fiat" />
+				<f:selectItem itemValue="Honda" itemLabel="Honda" />
+			</h:selectOneMenu>
+			
+			<h:outputLabel value="Quantidade de Diárias: " for="qtdDiarias" />
+			<h:inputText id="qtdDiarias"
+				value="" size="10"
+				required="true"
+				requiredMessage="Informe a quantidade de diárias" />
+			
+			<h:outputLabel value="Categoria: " for="categoriaCarro" />
+			<h:selectOneMenu id="categoriaCarro" value="#">
+				<f:selectItem itemValue="Executivo" itemLabel="Executivo" />
+				<f:selectItem itemValue="Luxo" itemLabel="Luxo" />
+			</h:selectOneMenu>
+			
+			<h:outputLabel value="Taxas: " for="taxasCarros" />
+			<input type="checkbox" value="seguro"> Seguro &nbsp;&nbsp;</input>
+			<input type="checkbox" value="tanqueCheio"> Tanque Cheio</input>
+
+			<h:commandButton action="#"
+				value="Salvar" class="btn btn-primary"  />
 
 
-
+		</h:panelGrid>
+	</h:form>
 
 	<!-- Optional JavaScript --> 
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
