--- a/projeto-hotel-ateneu/src/main/webapp/servico-babysitter.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/servico-babysitter.xhtml
@@ -24,8 +24,34 @@
 	<ui:include src="/templates/menu-navegacao.xhtml"></ui:include>
 	<!--  FIM DO MENU DE NAVEGAÇÃO -->
 
-	<h5>Serviço BabySitter</h5>
+	<h:form id="babysitter">
+	
+			<h:panelGrid columns="2" cellpadding="5">
+				<f:facet name="header">
+					<h:outputText value="Serviço de Baby Sitter" />
+				</f:facet>
+	
+				<h:outputLabel value="Idade: " for="idadecrianca" />
+				<h:selectOneMenu id="idadecrianca" value="#">
+					<f:selectItem itemValue="2" itemLabel="2" />
+					<f:selectItem itemValue="3" itemLabel="3" />
+					<f:selectItem itemValue="4" itemLabel="4" />
+					<f:selectItem itemValue="5" itemLabel="5" />
+					<f:selectItem itemValue="6" itemLabel="6" />
+					<f:selectItem itemValue="7" itemLabel="7" />
+					<f:selectItem itemValue="8" itemLabel="8" />
+					<f:selectItem itemValue="9" itemLabel="9" />
+				</h:selectOneMenu>
 
+				<h:outputLabel value="Hora do Serviço: " for="horaServico" />
+					<input type="time" name="horaInicioServico" required="true"
+					requiredMessage="Informe a hora inicial do serviço"/> às
+					<input type="time" name="horaTerminoServico"/>
+
+				<h:commandButton action="#" value="Salvar" class="btn btn-primary" />
+	
+		</h:panelGrid>
+	</h:form>
 
 
 
