--- a/projeto-hotel-ateneu/src/main/webapp/servico-aluguel-carro.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/servico-aluguel-carro.xhtml
@@ -3,8 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8" />
@@ -17,7 +16,6 @@
 		integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
 		crossorigin="anonymous" />
 
-	<title></title>
 </h:head>
 <h:body>
 
@@ -25,29 +23,44 @@
 	<ui:include src="/templates/menu-navegacao.xhtml"></ui:include>
 	<!--  FIM DO MENU DE NAVEGAÇÃO -->
 
-
-	<!-- INICIO DO CORPO DO FOMULARIO -->
-	<br />
-	<h5>CHECKOUT</h5>
-
-	<h:form id="pesquisarCliente">
+	<h:form id="aluguelCarros">
 		<h:messages />
-		<h:inputHidden value="#{clienteBean.cliente.id}" />
-		<h:panelGrid columns="3" cellpadding="5">
-			<h:outputLabel value="Pesquisar contrato: " for="contrato" />
-			<h:inputText id="contrato" value="#{clienteBean.contrato.numeroContrato}" />
-			<h:commandButton action="#{clienteBean.buscarCliente()}"
-				value="Pesquisar" class="btn btn-primary"></h:commandButton>
+
+		<h:panelGrid columns="2" cellpadding="5">
+			<f:facet name="header">
+				<h:outputText value="Aluguel de Carros" />
+			</f:facet>
+			
+			<h:outputLabel value="Marca: " for="marcaCarro" />
+			<h:selectOneMenu id="marcaCarro" value="#">
+				<f:selectItem itemValue="Fiat" itemLabel="Fiat" />
+				<f:selectItem itemValue="Honda" itemLabel="Honda" />
+			</h:selectOneMenu>
+			
+			<h:outputLabel value="Quantidade de Diárias: " for="qtdDiarias" />
+			<h:inputText id="qtdDiarias"
+				value="" size="10"
+				required="true"
+				requiredMessage="Informe a quantidade de diárias" />
+			
+			<h:outputLabel value="Categoria: " for="categoriaCarro" />
+			<h:selectOneMenu id="categoriaCarro" value="#">
+				<f:selectItem itemValue="Executivo" itemLabel="Executivo" />
+				<f:selectItem itemValue="Luxo" itemLabel="Luxo" />
+			</h:selectOneMenu>
+			
+			<h:outputLabel value="Taxas: " for="taxasCarros" />
+			<input type="checkbox" value="seguro"> Seguro &nbsp;&nbsp;</input>
+			<input type="checkbox" value="tanqueCheio"> Tanque Cheio</input>
+
+			<h:commandButton action="#"
+				value="Salvar" class="btn btn-primary"  />
+
+
 		</h:panelGrid>
-
-
-
-
-
 	</h:form>
 
-	<!-- FIM DO CORPO DO FOMULARIO -->
-	<!-- Optional JavaScript -->
+	<!-- Optional JavaScript --> 
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
