--- a/projeto-hotel-ateneu/src/main/webapp/index.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/index.xhtml
@@ -16,18 +16,18 @@
 		integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
 		crossorigin="anonymous" />
 
-	<title></title>
+	<title>Hotel Ateneu</title>
 </h:head>
 <h:body>
 
 	<!-- TITULO DA PAGINA -->
-	<nav class="navbar navbar-expand-sm bg-light">
-	<div class="page-header">
+	<nav class="navbar navbar-expand-sm bg-primary border">
+	<div class="page-header text-light">
 		<h3>Hotel Ateneu</h3>
 	</div>
 
 	<!-- BOTÃO QUE ATIVA A JANELA MODAL -->
-	<button type="button" class="btn btn-info"
+	<button type="button" class="btn btn-info ml-auto btn-light"
 		data-toggle="modal" data-target="#janela" id="botaoLogin">Logar</button>
 	</nav>
 	
