--- a/projeto-hotel-ateneu/src/main/webapp/index.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/index.xhtml
@@ -10,12 +10,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		
+		
 	<!-- Bootstrap CSS -->
-	<link rel="stylesheet"
-		href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-		integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-		crossorigin="anonymous" />
-
+	<h:outputStylesheet library="css" name="/bootstrap.css"/>	
+	<h:outputStylesheet library="css" name="/estilo.css"/>
+	
 	<title>Hotel Ateneu</title>
 </h:head>
 <h:body>
@@ -30,7 +30,7 @@
 	<button type="button" class="btn btn-info ml-auto btn-light"
 		data-toggle="modal" data-target="#janela" id="botaoLogin">Logar</button>
 	</nav>
-	
+
 
 	<div class="container">
 
