--- a/projeto-hotel-ateneu/src/main/webapp/index.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/index.xhtml
@@ -21,7 +21,7 @@
 <h:body>
 
 	<!-- TITULO DA PAGINA -->
-	<nav class="navbar navbar-expand-sm bg-primary border">
+	<nav class="navbar navbar-expand-sm bg-primary ">
 	<div class="page-header text-light">
 		<h3>Hotel Ateneu</h3>
 	</div>
@@ -78,7 +78,11 @@
 
 		</h:form>
 	</div>
-
+	
+	
+	<!-- RODAPÉ DA PÁGINA -->
+	<ui:include src="/templates/rodape.xhtml"></ui:include>
+	<!--  FIM DO RODAPÉ DA PÁGINA -->
 
 
 	<!-- Optional JavaScript -->
