--- a/projeto-hotel-ateneu/src/main/webapp/check-in.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/check-in.xhtml
@@ -127,7 +127,12 @@
 
 
 	</h:form>
-
+	
+	<!-- RODAPÉ DA PÁGINA -->
+	<ui:include src="/templates/rodape.xhtml"></ui:include>
+	<!--  FIM DO RODAPÉ DA PÁGINA -->
+	
+	
 	<!-- FIM DO CORPO DO FOMULARIO -->
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
