--- a/projeto-hotel-ateneu/src/main/webapp/cadastro-usuario.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/cadastro-usuario.xhtml
@@ -10,6 +10,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+	
+	<!-- Referência externa para icones -->
+	<link rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+	
+	
 		
 	<!-- Bootstrap CSS -->
 	<h:outputStylesheet library="css" name="/bootstrap.css"/>	
