--- a/projeto-hotel-ateneu/src/main/webapp/checkout.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/checkout.xhtml
@@ -3,18 +3,22 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		
+
+	<!-- Referência externa para icones -->
+	<link rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+
+
 	<!-- Bootstrap CSS -->
-	<h:outputStylesheet library="css" name="/bootstrap.css"/>	
-	<h:outputStylesheet library="css" name="/estilo.css"/>
+	<h:outputStylesheet library="css" name="/bootstrap.css" />
+	<h:outputStylesheet library="css" name="/estilo.css" />
 
 	<title></title>
 </h:head>
@@ -30,17 +34,65 @@
 	<h5>CHECKOUT</h5>
 
 	<h:form id="pesquisarCliente">
-		<h:messages />
-		<h:inputHidden value="#{clienteBean.cliente.id}" />
+
+		<!-- MENSAGENS DE VALIDAÇÃO -->
+		<h:messages id="mensagens" errorClass="alert alert-danger "
+			warnClass="aviso" infoClass="info" />
+
+
+		<!-- INICIO DO FORMULARIO -->
+		<h:inputHidden value="#{clienteBean.contrato.numeroContrato}" />
 		<h:panelGrid columns="3" cellpadding="5">
 			<h:outputLabel value="Pesquisar contrato: " for="contrato" />
-			<h:inputText id="contrato" value="#{clienteBean.contrato.numeroContrato}" />
-			<h:commandButton action="#{clienteBean.buscarCliente()}"
+			<h:inputText id="contrato"
+				value="#{clienteBean.contrato.numeroContrato}" />
+			<h:commandButton action="#{clienteBean.buscarCliente}"
 				value="Pesquisar" class="btn btn-primary"></h:commandButton>
 		</h:panelGrid>
 
+		<h:panelGrid columns="2" cellpadding="5" border="1">
+			<h:outputLabel value="Nome cliente: " for="cliente" />
+			<h:outputText id="cliente"
+				value="#{clienteBean.contratoCheckout.cliente.nome}" />
+
+			<h:outputLabel value="CPF: " for="cpf" />
+			<h:outputText id="cpf" value="#{clienteBean.contratoCheckout.cpf}" />
+		</h:panelGrid>
 
 
+		<h:dataTable value="#{clienteBean.operacoesCliente}" var="operacao"
+			cellspacing="5" cellpadding="5" border="1">
+
+			<h:column>
+				<f:facet name="header">Tipo Serviço</f:facet>
+					#{operacao.tipoServico}
+			</h:column>
+
+			<h:column>
+				<f:facet name="header">Nome Serviço</f:facet>
+					#{operacao.nomeServico}
+			</h:column>
+
+			<h:column>
+				<f:facet name="header">Data Serviço</f:facet>
+					#{operacao.dataOperacao}
+			</h:column>
+
+			<h:column>
+				<f:facet name="header">Valor Serviço</f:facet>
+					#{operacao.valorOperacao}
+			</h:column>
+
+		</h:dataTable>
+
+
+		<h:panelGrid columns="2" cellpadding="5">
+			<h:outputLabel value="Total à Pagar: " for="totalPagamento" />
+			<h:outputText id="totalPagamento" value="#{clienteBean.totalPagar}" />
+		</h:panelGrid>
+
+		<h:commandButton action="#{clienteBean.realizarCheckout}"
+			value="Checkout" />
 
 
 	</h:form>
