--- a/projeto-hotel-ateneu/src/main/webapp/pagina-principal.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/pagina-principal.xhtml
@@ -10,6 +10,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+	
+	<!-- Referência externa para icones -->
+	<link rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 		
 	<!-- Bootstrap CSS -->
 	<h:outputStylesheet library="css" name="/bootstrap.css"/>	
@@ -23,7 +27,17 @@
 	<ui:include src="/templates/menu-navegacao.xhtml"></ui:include>
 	<!--  FIM DO MENU DE NAVEGAÇÃO -->
 	
-	<h3>Bem vindo, <h:outputText value="#{usuarioBean.usuarioLogado.nomeCompleto}"/></h3>
+	
+	<div class="areaUsuario">
+		<div id="usuarioLogado">
+			<b>Usuário: </b>
+			<h:outputLabel value="#{usuarioBean.usuarioLogado.nomeCompleto}" />
+		</div>
+	</div>
+		
+	<!-- RODAPÉ DA PÁGINA -->
+	<ui:include src="/templates/rodape.xhtml"></ui:include>
+	<!--  FIM DO RODAPÉ DA PÁGINA -->
 	
 	
 	<!-- Optional JavaScript -->
