--- a/projeto-hotel-ateneu/src/main/webapp/check-in.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/check-in.xhtml
@@ -50,7 +50,7 @@
 		<h:messages />
 		<h:inputHidden value="#{clienteBean.cliente.id}" />
 
-		<div class="checkin-dados-clientes">
+		<div class="area-formulario">
 			<h:panelGrid columns="2" cellpadding="5">
 
 				<f:facet name="header">
@@ -94,7 +94,7 @@
 		</div>
 
 
-		<div class="checkin-dados-clientes" style="margin-top: 10px;">
+		<div class="area-formulario" style="margin-top: 10px;">
 			<h:panelGrid columns="2" cellpadding="5">
 				<f:facet name="header">
 					<h:outputText value="Serviços" />
@@ -129,7 +129,7 @@
 		</div>
 
 
-		<div class="checkin-dados-clientes" style="margin-top: 10px; margin-bottom: 10px;">
+		<div class="area-formulario" style="margin-top: 10px; margin-bottom: 10px;">
 			<h:panelGrid columns="2" cellpadding="5">
 				<f:facet name="header">
 					<h:outputText value="Serviços Adicionais" />
