--- a/projeto-hotel-ateneu/src/main/webapp/index.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/index.xhtml
@@ -22,7 +22,7 @@
 	<title>Hotel Ateneu</title>
 </h:head>
 <h:body>
-
+<div  class="conteudo-tela-login">
 	<!-- TITULO DA PAGINA -->
 	<nav class="navbar navbar-expand-sm bg-primary ">
 		<a class="navbar-brand" href="#" style="color:white;">
@@ -84,7 +84,7 @@
 		</h:form>
 	</div>
 
-
+</div>
 	<!-- RODAPÉ DA PÁGINA -->
 	<ui:include src="/templates/rodape.xhtml"></ui:include>
 	<!--  FIM DO RODAPÉ DA PÁGINA -->
