--- a/projeto-hotel-ateneu/src/main/webapp/cadastro-usuario.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/cadastro-usuario.xhtml
@@ -10,60 +10,87 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-	
+
 	<!-- Referência externa para icones -->
 	<link rel="stylesheet"
-		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-	
-	
-		
+		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+
+
+
 	<!-- Bootstrap CSS -->
-	<h:outputStylesheet library="css" name="/bootstrap.css"/>	
-	<h:outputStylesheet library="css" name="/estilo.css"/>
+	<h:outputStylesheet library="css" name="/bootstrap.css" />
+	<h:outputStylesheet library="css" name="/estilo.css" />
 
 	<title></title>
 </h:head>
 <h:body>
+	<div class="conteudo">
+		<!-- MENU DE NAVEGAÇÃO -->
+		<ui:include src="/templates/menu-navegacao.xhtml"></ui:include>
+		<!--  FIM DO MENU DE NAVEGAÇÃO -->
 
-	<!-- MENU DE NAVEGAÇÃO -->
-	<ui:include src="/templates/menu-navegacao.xhtml"></ui:include>
-	<!--  FIM DO MENU DE NAVEGAÇÃO -->
+		<!-- TITULO DA PAGINA E NOME DO USUARIO LOGADO -->
+		<div class="areaUsuario">
+			<div id="titulo-pagina">
+				<h5>
+					<i class="fa fa-arrow-circle-o-right"
+						style="padding-right: 5px; color: green;"></i>Cadastro Usuário
+				</h5>
+			</div>
+			<div id="usuarioLogado">
+				<b>Usuário: </b>
+				<h:outputLabel value="#{usuarioBean.usuarioLogado.nomeCompleto}" />
+			</div>
+		</div>
 
-	<h5>Cadastro de Usuarios</h5>
+		<h:form id="cadastroUsuario">
+			<h:messages />
+			<div class="container">
+				<div class="area-formulario">
+					<h:panelGrid columns="2" cellpadding="5">
+						<f:facet name="header">
+							<h:outputText value="Cadastro de Usuario" />
+						</f:facet>
 
-	<h:form id="cadastroUsuario">
-		<h:messages />
+						<h:outputLabel value="Nome: " for="nome" />
+						<h:inputText id="nome" value="#{usuarioBean.usuario.nomeCompleto}"
+							size="50" required="true"
+							requiredMessage="Informe o nome completo do usuario"
+							styleClass="campo-formulario" />
 
-		<h:panelGrid columns="2" cellpadding="5">
-			<f:facet name="header">
-				<h:outputText value="Cadastro de Usuario" />
-			</f:facet>
-			
-			<h:outputLabel value="Nome: " for="nome"/>
-			<h:inputText id="nome" value="#{usuarioBean.usuario.nomeCompleto}" size="50" required="true"
-			requiredMessage="Informe o nome completo do usuario"/>
-			
-			<h:outputLabel value="Login: " for="login"/>
-			<h:inputText id="login" value="#{usuarioBean.usuario.login}" size="25" required="true"
-			requiredMessage="Informe um login válido"/>
-			
-			<h:outputLabel value="Senha: " for="senha" />
-			<h:inputSecret id="senha" value="#{usuarioBean.usuario.senha}" size="25" required="true"
-			requiredMessage="Informe uma senha"/>
-			
-			<h:outputLabel value="Confime a senha: " for="senhaConfirmar" />
-			<h:inputSecret id="senhaConfirmar" value="#{usuarioBean.confirmarSenha}" size="25" required="true"
-			requiredMessage="Informe a senha de confirmação"/>
-			
-			<h:commandButton action="#{usuarioBean.cadastroUsuario}" value="Salvar"/>
-		</h:panelGrid>
+						<h:outputLabel value="Login: " for="login" />
+						<h:inputText id="login" value="#{usuarioBean.usuario.login}"
+							size="25" required="true"
+							requiredMessage="Informe um login válido"
+							styleClass="campo-formulario" />
+
+						<h:outputLabel value="Senha: " for="senha" />
+						<h:inputSecret id="senha" value="#{usuarioBean.usuario.senha}"
+							size="25" required="true" requiredMessage="Informe uma senha"
+							styleClass="campo-formulario" />
+
+						<h:outputLabel value="Confime a senha: " for="senhaConfirmar" />
+						<h:inputSecret id="senhaConfirmar"
+							value="#{usuarioBean.confirmarSenha}" size="25" required="true"
+							requiredMessage="Informe a senha de confirmação"
+							styleClass="campo-formulario" />
+					</h:panelGrid>
+				</div>
+				<h:commandButton action="#{usuarioBean.cadastroUsuario}"
+					value="Salvar" styleClass="btn btn-primary"
+					style="margin-top:10px; margin-left: 10px;" />
+
+			</div>
+
+		</h:form>
+	</div>
+	<!-- RODAPÉ DA PÁGINA -->
+	<ui:include src="/templates/rodape.xhtml"></ui:include>
+	<!--  FIM DO RODAPÉ DA PÁGINA -->
 
 
-	</h:form>
 
-
-
-	<!-- Optional JavaScript --> 
+	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
