--- a/projeto-hotel-ateneu/src/main/webapp/pesquisar-contrato.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/pesquisar-contrato.xhtml
@@ -20,7 +20,7 @@
 	<h:outputStylesheet library="css" name="/bootstrap.css" />
 	<h:outputStylesheet library="css" name="/estilo.css" />
 
-	<title>Hotel Ateneu</title>
+	<title></title>
 </h:head>
 <h:body>
 	<div class="conteudo">
@@ -28,12 +28,14 @@
 		<ui:include src="/templates/menu-navegacao.xhtml"></ui:include>
 		<!--  FIM DO MENU DE NAVEGAÇÃO -->
 
+
 		<!-- TITULO DA PAGINA E NOME DO USUARIO LOGADO -->
 		<div class="areaUsuario">
 			<div id="titulo-pagina">
 				<h5>
-					<i class="fa fa-black-tie" style="padding-right: 5px; color: blue;"></i>Administrar
-					Usuários
+					<i class="fa fa-arrow-circle-o-left"
+						style="padding-right: 5px; color: red;"></i>Pesquisar/Editar
+					Contrato
 				</h5>
 			</div>
 			<div id="usuarioLogado">
@@ -42,41 +44,84 @@
 			</div>
 		</div>
 
-		<h:form id="cadastroUsuario">
-			<h:messages />
+		<!-- INICIO DO CORPO DO FOMULARIO -->
+		<h:form id="pesquisarCliente">
 
-			<div class="container area-formulario">
-				<h:dataTable value="#{usuarioBean.lista}" var="usuario" border="1"
-					cellpadding="5" style="align: center;">
-					<f:facet name="header">Listagem de Usuários</f:facet>
+			<!-- MENSAGENS DE VALIDAÇÃO -->
+			<h:messages id="mensagens" errorClass="alert alert-danger "
+				warnClass="alert alert-warning" infoClass="alert alert-primary" />
 
+
+			<!-- INICIO DO FORMULARIO -->
+			<div class="area-formulario">
+				<h:inputHidden value="#{clienteBean.contrato.numeroContrato}" />
+				<h:panelGrid columns="3" cellpadding="5">
+					<h:outputLabel value="Pesquisar contrato: " for="contrato" />
+					<h:inputText id="contrato"
+						value="#{clienteBean.contrato.numeroContrato}" />
+					<h:commandButton action="#{clienteBean.buscarEditarContrato}"
+						value="Pesquisar" class="btn btn-primary"></h:commandButton>
+				</h:panelGrid>
+
+
+				<h:panelGrid columns="2" cellpadding="5">
+
+					<h:outputLabel value="Nome cliente: " for="cliente" />
+					<h:inputText id="cliente"
+						value="#{clienteBean.buscarContrato.nomeCompleto}" />
+
+					<h:outputLabel value="CPF: " for="cpf" />
+					<h:inputText id="cpf" value="#{clienteBean.buscarContrato.cpf}" />
+
+					
+				</h:panelGrid>
+
+
+				<h:dataTable value="#{clienteBean.operacoesCliente}" var="operacao"
+					cellspacing="5" cellpadding="5" border="1">
 
 					<h:column>
-						<f:facet name="header">Código</f:facet>
-			#{usuario.id}
-		</h:column>
+						<f:facet name="header">Tipo Serviço</f:facet>
+					#{operacao.tipoServico}
+			</h:column>
 
 					<h:column>
-						<f:facet name="header">Login</f:facet>
-			#{usuario.login}
-		</h:column>
+						<f:facet name="header">Nome Serviço</f:facet>
+					#{operacao.nomeServico}
+			</h:column>
 
 					<h:column>
-						<f:facet name="header">Nome Completo</f:facet>
-			#{usuario.nomeCompleto}
-		</h:column>
+						<f:facet name="header">Data Serviço</f:facet>
+					#{operacao.dataOperacao}
+			</h:column>
+
 					<h:column>
-						<f:facet name="header">Editar</f:facet>
-			<h:commandLink action="#{usuarioBean.editarUsuario}"><i class="fa fa-wrench"></i></h:commandLink>			
-		</h:column>
+						<f:facet name="header">Valor Serviço</f:facet>
+						<h:outputText value="#{operacao.valorOperacao}">
+							<f:convertNumber currencySymbol="R$" type="currency" />
+						</h:outputText>
+					</h:column>
 
 				</h:dataTable>
+
+
+				<h:panelGrid columns="2" cellpadding="5">
+					<h:outputLabel value="Total à Pagar: " for="totalPagamento" />
+					<h:outputText id="totalPagamento" value="#{clienteBean.totalPagar}">
+						<f:convertNumber currencySymbol="R$" type="currency" />
+					</h:outputText>
+				</h:panelGrid>
+
 			</div>
 		</h:form>
+		<!-- FIM DO CORPO DO FOMULARIO -->
 	</div>
+
 	<!-- RODAPÉ DA PÁGINA -->
 	<ui:include src="/templates/rodape.xhtml"></ui:include>
 	<!--  FIM DO RODAPÉ DA PÁGINA -->
+
+
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
