--- a/projeto-hotel-ateneu/src/main/webapp/cadastro-usuario.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/cadastro-usuario.xhtml
@@ -34,7 +34,7 @@
 			<div id="titulo-pagina">
 				<h5>
 					<i class="fa fa-arrow-circle-o-right"
-						style="padding-right: 5px; color: green;"></i>Cadastro Usuário
+						style="padding-right: 5px; color: green;"></i>Cadastrar Usuário
 				</h5>
 			</div>
 			<div id="usuarioLogado">
@@ -44,8 +44,9 @@
 		</div>
 
 		<h:form id="cadastroUsuario">
-			<h:messages />
+			
 			<div class="container">
+			<h:messages infoClass="alert alert-primary"/>
 				<div class="area-formulario">
 					<h:panelGrid columns="2" cellpadding="5">
 						<f:facet name="header">
