--- a/projeto-hotel-ateneu/src/main/webapp/checkout.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/checkout.xhtml
@@ -45,7 +45,7 @@
 	
 	<!-- INICIO DO CORPO DO FOMULARIO -->
 	<h:form id="pesquisarCliente">
-
+		<div class="container">
 		<!-- MENSAGENS DE VALIDAÇÃO -->
 		<h:messages id="mensagens" errorClass="alert alert-danger "
 			warnClass="alert alert-warning" infoClass="alert alert-primary" />
@@ -113,7 +113,7 @@
 		<h:commandButton action="#{clienteBean.realizarCheckout}"
 			value="Checkout" styleClass="btn btn-primary"/>
 
-
+		</div>
 	</h:form>
 	<!-- FIM DO CORPO DO FOMULARIO -->
 	</div>
