--- a/projeto-hotel-ateneu/src/main/webapp/index.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/index.xhtml
@@ -75,7 +75,7 @@
 					</div>
 
 					<div class="modal-footer">
-						<h:commandButton value="Login" action="#{usuarioBean.logar}" />
+						<h:commandButton value="Login" action="#{usuarioBean.logar}" styleClass="btn btn-primary"/>
 					</div>
 
 				</div>
